# mini_armv6_emulator

./: .codespellrc  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c
test/: CMakeLists.txt
test/source/: emulator_test.c
